objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>ACV_Inspection_Id__c</fullName>
        <externalId>true</externalId>
        <label>ACV Inspection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_or_Import_Manager__c</fullName>
        <formula>IF( !ISBLANK( External_Record_guid__c ),
IF( CONTAINS( TEXT( WorkOrder.Origin__c ) , &quot;Import Manager&quot; ), &quot;Import Manager&quot;, &quot;API&quot; ), 
&quot;&quot; )</formula>
        <label>API or Import Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_Run_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Run List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannot_Complete_Reason__c</fullName>
        <label>Cannot Complete Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Time__c</fullName>
        <description>Date time value of when the records was put into a completed status category</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Number__c</fullName>
        <label>Contact Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Inspected__c</fullName>
        <label>Date Inspected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>(NOW() - CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <label>Dealer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <description>Holds the Dealer Id from the Work Order&apos;s Account.</description>
        <formula>WorkOrder.Account.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Salesforce_Id__c</fullName>
        <description>The Salesforce Id of the Account on the Work Order</description>
        <formula>WorkOrder.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Salesforce Id of the Account on the Work Order</inlineHelpText>
        <label>Dealer Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Holds the Dealer Type API Name from Account</description>
        <formula>TEXT(WorkOrder.Account.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <label>Dealership Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_Directions__c</fullName>
        <label>Driving Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_in_Minutes__c</fullName>
        <formula>WorkType.DurationInMinutes</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Optimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Assignment_Id__c</fullName>
        <label>External Assignment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Invoice_Id__c</fullName>
        <label>External Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Link_Code__c</fullName>
        <label>External Link Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Link__c</fullName>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Record_guid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Record guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Source__c</fullName>
        <description>Finance Source</description>
        <label>Finance Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is a unique Id owned by ACV Inspection Database &amp; App</description>
        <externalId>true</externalId>
        <label>Inspection Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inspection_Location__c</fullName>
        <label>Inspection Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Life_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated with the Inventory Life Cycle that it relates to.</description>
        <label>Inventory Life Cycle</label>
        <referenceTo>Inventory_Life_Cycle__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_In_Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Jeopardy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jeopardy_State__c</fullName>
        <label>Jeopardy State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open FBI</fullName>
                </value>
                <value>
                    <fullName>Unresourced</fullName>
                </value>
                <value>
                    <fullName>Late Start Work</fullName>
                </value>
                <value>
                    <fullName>Unable to update Schedule</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Forced Appointment</fullName>
                </value>
                <value>
                    <fullName>EarlyStart is after DueDate</fullName>
                </value>
                <value>
                    <fullName>Dispatched CPO Time has changed</fullName>
                </value>
                <value>
                    <fullName>Unscheduled TDI - VW task with EarlyStart approaching</fullName>
                </value>
                <value>
                    <fullName>Unscheduled CPO with Commitment Flag True</fullName>
                </value>
                <value>
                    <fullName>DueDate Changed (Roll Over)</fullName>
                </value>
                <value>
                    <fullName>Unscheduled Dealer-Auction Task with SLA in Past</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Notes__c</fullName>
        <label>Job Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Status_Set_Time__c</fullName>
        <label>Last Status Set Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lesse_Name__c</fullName>
        <label>Lesse Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Missing_Dealer_Jacket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a Dealer Jacket is available; otherwise, false. Populated by the Flow: Asset Verification.</description>
        <label>Missing Bill of Sale/Deal Jacket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Lot_Notes__c</fullName>
        <description>Contains notes for Work Order Line Items with a Status set to &quot;At Other Location&quot;. May be populated by the Flow: Asset Verification.</description>
        <label>Off-Lot Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>When the request was open in an external system (if supplied)</description>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Revolving Term</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>How the buyer has paid/will be paying - either with cash or through financing.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserve_Price__c</fullName>
        <description>A location for the reserve price to be entered by IST for inspectors to use through fsl. This field is required by the assignmentManagerCreateWorkLines code pieces.</description>
        <label>Reserve Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <description>May be populated by the Flow: Asset Verification.</description>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Number__c</fullName>
        <label>Stock Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Origin__c</fullName>
        <formula>IF( CONTAINS( CreatedBy.Full_Name__c, &quot;Asset&quot; ), &quot;DataHub Asset Verification&quot;, 
IF( CONTAINS( CreatedBy.Full_Name__c, &quot;TrueFrame&quot; ), &quot;V1 TrueFrame Inspections&quot;, 
IF( CONTAINS( CreatedBy.Full_Name__c, &quot;InspectionDB&quot; ), &quot;InspectionDB Work&quot;,  
IF( CONTAINS( CreatedBy.Full_Name__c, &quot;MyACV&quot; ), &quot;Inspections from MyACV&quot;,  
IF( CONTAINS( CreatedBy.Full_Name__c, &quot;Supply&quot; ), &quot;Supply Standard Inspections&quot;, 
&quot;Bulk Importer&quot; )
)
) 
)
)</formula>
        <label>Technical Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Status__c</fullName>
        <label>Title Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_with_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title with Dealer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transport_Status__c</fullName>
        <label>Transport Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transport Arranged</fullName>
                </value>
                <value>
                    <fullName>Unit Delivered</fullName>
                </value>
                <value>
                    <fullName>Unit in Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WOLI_Status__c</fullName>
        <description>This picklist field will be used to change the status of the Work order line item</description>
        <label>WOLI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Ready</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_and_Make_and_Model__c</fullName>
        <formula>IF( WorkType.Work_Type_Unique_ID__c == &apos;promo work&apos;,  Task__c , Year__c &amp; &apos; &apos; &amp; Make__c &amp; &apos; &apos; &amp; Model__c &amp; &apos; &apos; &amp; Color__c )</formula>
        <label>Year and Make and Model</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Allow_Asset_Verification_Change</fullName>
        <active>false</active>
        <errorConditionFormula>WorkType.Name != &apos;Asset Verification&apos; &amp;&amp; WorkType.Name != &apos;True 360&apos; &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorMessage>You do not have permission to change the Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_VCIs_LCs_from_Canceling_WOLIs</fullName>
        <active>true</active>
        <description>Prevent VCI&apos;s from Canceling WOLI Jobs.
Prevent LC&apos;s from Canceling some WOLI Jobs with Work Types equal to Auction Off-Lease, any CPO, Dealer or FBI...   EXCEPT Users in the Permission Set &quot;Allow Cancellation of some Work Type jobs&quot;.</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; ISPICKVAL(Status, &apos;Canceled&apos;) &amp;&amp; (BEGINS($Profile.Name, &apos;Vehicle&apos;) || (BEGINS($Profile.Name, &apos;Logistics&apos;) &amp;&amp; NOT($Permission.Allow_Cancellation_of_some_Work_Type_jobs) &amp;&amp; (WorkType.Name = &apos;Auction Off-lease&apos; || BEGINS(WorkType.Name , &apos;CPO&apos;) || WorkType.Name = &apos;Dealer&apos; || WorkType.Name = &apos;FBI&apos;)))</errorConditionFormula>
        <errorMessage>Status cannot be updated to Canceled for Work Types equal to Auction Off-Lease, any CPO, Dealer, or FBI.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Sale_Date_if_In_Sold_Status</fullName>
        <active>false</active>
        <description>Validation Rule that requires sale date on Work Order Line Item to be filled out if the status is in a Sold status.</description>
        <errorConditionFormula>AND(ISBLANK( Sale_Date__c), OR( TEXT(Status) == &apos;Sold Paid&apos;, TEXT(Status) == &apos;Sold But Not Paid&apos;))</errorConditionFormula>
        <errorMessage>Please fill out the Sale date if your Vehicle is in a Sold status.</errorMessage>
    </validationRules>
</CustomObject>